kuber/all_conf.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: favourite
  name: cassandra
spec:
  clusterIP: None
  ports:
  - port: 9042
  selector:
    app: favourite
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: favourite
  name: favapp-service
spec:
  ports:
  - name: api
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: favourite
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: favourite
  name: favapp-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: favourite
  template:
    metadata:
      labels:
        app: favourite
    spec:
      containers:
      - image: registry.gitlab.atp-fivt.org/tpos2020/litvintsevada-tposhw/favapp:latest
        imagePullPolicy: Always
        name: favapp
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: registrypullsecret
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: favourite
  name: cassandra
spec:
  replicas: 2
  selector:
    matchLabels:
      app: favourite
  serviceName: cassandra
  template:
    metadata:
      labels:
        app: favourite
    spec:
      containers:
      - env:
        - name: MAX_HEAP_SIZE
          value: 512M
        - name: HEAP_NEWSIZE
          value: 100M
        - name: CASSANDRA_SEEDS
          value: cassandra-0.cassandra.default.svc.cluster.local
        - name: CASSANDRA_CLUSTER_NAME
          value: K8Demo
        - name: CASSANDRA_DC
          value: DC1-K8Demo
        - name: CASSANDRA_RACK
          value: Rack1-K8Demo
        - name: POD_IP
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        image: registry.gitlab.atp-fivt.org/tpos2020/litvintsevada-tposhw/cassandra:latest
        imagePullPolicy: Always
        lifecycle:
          postStart:
            exec:
              command:
              - /usr/local/create_keyspace.sh
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - nodetool drain
        name: cassandra
        ports:
        - containerPort: 7000
          name: intra-node
        - containerPort: 7001
          name: tls-intra-node
        - containerPort: 7199
          name: jmx
        - containerPort: 9042
          name: cql
        readinessProbe:
          exec:
            command:
            - /bin/bash
            - -c
            - /usr/local/ready_probe.sh
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 1Gi
        securityContext:
          capabilities:
            add:
            - IPC_LOCK
        volumeMounts:
        - mountPath: /cassandra_data
          name: cassandra-data
      imagePullSecrets:
      - name: registrypullsecret
      terminationGracePeriodSeconds: 1800
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      labels:
        app: favourite
      name: cassandra-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: fast
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app: favourite
  name: favapp-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: favapp-service
          servicePort: 80
        path: /
